# azure-simple-setup

./: .gitignore  README.md  app.tf  auth.tf  cdn.tf  main.tf  output.tf  storage.tf  variables.tf
.github/workflows/: actions.yml
app/: README.md  pyproject.toml
app/etc/docker/: Dockerfile
app/scripts/: docker.bat
app/src/app/: __init__.py  app.py
app/tests/: test_app.py
functions/auth/: README.md  function.proj  run.csx
